sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:8: error: not found: value j
      while(j>0 && !plusPetit(i-n*ecart,i-(n-1)*ecart)){
            ^